--- a/index.html
+++ b/index.html
@@ -35,12 +35,14 @@
     </div>
     <div class="replay">Replay</div>
     <div class="start_again">Start Again</div>
+    <div id="bar"></div>
 
 </body>
 
 <script type="text/javascript" src="js/jquery-3.1.0.min.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/toastr.js"></script>
+<script type="text/javascript" src="js/echarts.min.js"></script>
 <script type="text/javascript" src="js/g1.js"></script>
 <script type="text/javascript">
 </script>
