--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <div class="replay">Replay</div>
     <div class="start_again">Start Again</div>
     <div id="bar"></div>
+    <div id="bar2"></div>
 
 </body>
 
