--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
     <div class="start_again">Start Again</div>
     <div id="bar"></div>
     <div id="bar2"></div>
+    <div id="copyright">
+        @Copyright&nbsp&nbsp&nbspAuthor: Chufan Deng
+    </div>
 
 </body>
 
